--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Yanjun Sun
+title: Yanjun Sun (孫延君)
 position: Ph.D. Student
 affiliation: Keio Unviersity
 email: sunyanjun@keio.jp
