--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Yanjun Sun (孫延君)
+title: Yanjun Sun \\ (孫延君)
 position: Ph.D. Student
 affiliation: Keio Unviersity
 email: sunyanjun@keio.jp
@@ -19,9 +19,9 @@ linkedin: https://www.linkedin.com/in/yanjun-sun-86138919a
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/yanjun_sun.jpg
-favicon: ./assets/img/dafu.jpg
-favicon_dark: ./assets/img/dafu.jpg
+avatar: ./assets/img/dafuwithme.JPG
+favicon: ./assets/img/dafu.JPG
+favicon_dark: ./assets/img/dafu.JPG
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
