--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Yanjun Sun \\ (孫延君)
+title: Yanjun Sun \n (孫延君)
 position: Ph.D. Student
 affiliation: Keio Unviersity
 email: sunyanjun@keio.jp
@@ -19,7 +19,7 @@ linkedin: https://www.linkedin.com/in/yanjun-sun-86138919a
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/dafuwithme.JPG
+avatar: ./assets/img/yanjunsun.jpg
 favicon: ./assets/img/dafu.JPG
 favicon_dark: ./assets/img/dafu.JPG
 
